--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "backend",
   "version": "1.0.0",
   "engines": {
-    "node": "14.17.4"
+    "node": "14.17.4",
+    "npm":"7.20.3"
   },
   "description": "Backend of social media",
   "main": "index.js",
