--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.17.4",
+    "npm":"7.20.3"
+  },
   "description": "Backend of social media",
   "main": "index.js",
   "type": "module",
