--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
