--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "firebase": "^9.6.5",
     "js-cookie": "^3.0.1",
+    "lottie-web": "^5.10.2",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
